# platform.core.account.fido-client

./: CMakeLists.txt  LICENSE.Apache-2.0  fido.manifest  org.tizen.FidoSample.manifest
client/: CMakeLists.txt  fido-client.pc.in  fido_uaf_authenticator.c  fido_uaf_client.c
common/: CMakeLists.txt  fido_b64_util.c  fido_b64_util.h  fido_internal_types.h  fido_json_handler.c  fido_json_handler.h  fido_keys.h  fido_logs.h  fido_tlv_util.c  fido_tlv_util.h  fido_uaf_types.h  fido_uaf_utils.c
common/dbus_interfaces/: dummyasm.xml  fido.xml
doc/: fido_doc.h
etc/dbus-1/system.d/: org.tizen.fido.conf
fido_svc_ui/: CMakeLists.txt  CMakeLists.txt.autosave  fido_ui_server.c  org.tizen.fidosvcui.xml.in
include/: fido.h  fido_uaf_authenticator.h  fido_uaf_client.h
packaging/: fido-client.spec  fido.service  org.tizen.dummyasm.conf  org.tizen.dummyasm.service  org.tizen.fido.service  org.tizen.fidosvcui.service
server/: CMakeLists.txt  fido_app_id_handler.c  fido_app_id_handler.h  fido_asm_plugin_manager.c  fido_asm_plugin_manager.h  fido_privilege_checker.c  fido_privilege_checker.h  fido_selection_ui_adaptor.c  fido_selection_ui_adaptor.h  fido_server.c  fido_uaf_policy_checker.c  fido_uaf_policy_checker.h
test/3_0_Sample_App/FIDOSample/: .cproject  .project  project_def.prop  tizen-manifest.xml
test/3_0_Sample_App/FIDOSample/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
test/3_0_Sample_App/FIDOSample/inc/: fidosample.h
test/3_0_Sample_App/FIDOSample/res/: auth_req.json  dereg_req.json  reg_req.json
test/3_0_Sample_App/FIDOSample/src/: fidosample.c
test/Dummy_ASM_DBUS/: CMakeLists.txt  dummy_asm.json  dummy_asm_server.c
test/FIDOSample/: .cproject  .project  .rds_delta  .sdk_delta.info  tizen-manifest.xml
test/FIDOSample/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
test/FIDOSample/res/: auth_req.json  dereg_req.json  reg_req.json
test/FIDOSample/src/: main.c
test/Fido_Sample_RPM/: .cproject  .project  CMakeLists.txt  org.tizen.FidoSample.xml.in
test/Fido_Sample_RPM/include/: main.h
test/Fido_Sample_RPM/po/: CMakeLists.txt  hello-efl.pot  update-po.sh  zh_TW.po
test/Fido_Sample_RPM/res/: auth_req.json  dereg_req.json  reg_req.json
test/Fido_Sample_RPM/src/: main.c
test/shell_tc/: CMakeLists.txt  fido_shell_tc.c  fido_shell_tc_util.c  fido_shell_tc_util.h
usr/lib/: libfido-client.so.0  libfido-client.so.0.0.1
usr/share/dbus-1/system-services/: org.tizen.fido.service
