CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(fido-client C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(INCLUDEDIR "\${prefix}/include ")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.1")

ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(fido_svc_ui)
ADD_SUBDIRECTORY(server)
ADD_DEPENDENCIES(fido-service fido-ui-service)
#INSTALL(DIRECTORY lib/fido/asm/ DESTINATION lib/fido/asm/)
ADD_SUBDIRECTORY(test/Dummy_ASM_DBUS)
ADD_SUBDIRECTORY(test/Fido_Sample_RPM)
ADD_SUBDIRECTORY(test/shell_tc)
