CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(fido-client C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(INCLUDEDIR "\${prefix}/include ")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.1")

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(fido_svc_ui)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)
ADD_DEPENDENCIES(fido-service fido-client-common)
ADD_DEPENDENCIES(org.tizen.fidosvcui fido-client-common)
ADD_DEPENDENCIES(fido-client fido-client-common)
#INSTALL(DIRECTORY lib/fido/asm/ DESTINATION lib/fido/asm/)
ADD_SUBDIRECTORY(test/Dummy_ASM_DBUS)
##ADD_SUBDIRECTORY(test/shell_tc)
MESSAGE( STATUS "USE_JSON_BUILDER: " ${USE_JSON_BUILDER} )
if(NOT USE_JSON_BUILDER)
ADD_SUBDIRECTORY(test/Fido_Sample_RPM)
endif()

