
SET(CLIENT_LIB fido-client)

SET(CLIENT_SRCS
	fido_uaf_client.c
	fido_uaf_authenticator.c
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)

INCLUDE(FindPkgConfig)
pkg_check_modules(CLIENT_PKGS REQUIRED
		dlog
		glib-2.0
		gio-unix-2.0
		gobject-2.0
		capi-base-common
		json-glib-1.0
		openssl
)

FOREACH(flag ${CLIENT_PKGS_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -Werror")
SET(CMAKE_LDFLAGS "-Wl,-zdefs")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")

if(USE_JSON_BUILDER)
add_definitions(-DWITH_JSON_BUILDER)
endif()

ADD_LIBRARY(${CLIENT_LIB} SHARED ${CLIENT_SRCS})


SET_TARGET_PROPERTIES(${CLIENT_LIB} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${CLIENT_LIB} PROPERTIES VERSION ${VERSION})

TARGET_LINK_LIBRARIES(${CLIENT_LIB} ${CLIENT_PKGS_LDFLAGS} fido-client-common)

INSTALL(TARGETS ${CLIENT_LIB} DESTINATION ${LIBDIR})

INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/fido.h DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/fido_uaf_authenticator.h DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/fido_uaf_client.h DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/common/fido_uaf_types.h DESTINATION include)

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/client/${CLIENT_LIB}.pc.in ${CMAKE_SOURCE_DIR}/client/${CLIENT_LIB}.pc @ONLY)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/client/${CLIENT_LIB}.pc DESTINATION ${LIBDIR}/pkgconfig)
