IF(NOT DEFINED PACKAGE_NAME)
	SET(PACKAGE_NAME "org.tizen.FidoSample")
ENDIF(NOT DEFINED PACKAGE_NAME)

SET(PREFIX "/opt/usr/apps/${PACKAGE_NAME}")

IF(NOT DEFINED BINDIR)
	SET(BINDIR "${PREFIX}/bin")
ENDIF(NOT DEFINED BINDIR)

IF(NOT DEFINED RESDIR)
	SET(RESDIR "${PREFIX}/res")
ENDIF(NOT DEFINED RESDIR)

IF(NOT DEFINED LOCALEDIR)
	SET(LOCALEDIR "${PREFIX}/res/locale")
ENDIF(NOT DEFINED LOCALEDIR)

IF(NOT DEFINED MANIFESTDIR)
	SET(MANIFESTDIR "/opt/share/packages")
ENDIF(NOT DEFINED MANIFESTDIR)

IF(NOT DEFINED DESKTOP_ICONDIR)
	SET(DESKTOP_ICONDIR "/opt/usr/apps/org.tizen.FidoSample/shared/res/")
ENDIF(NOT DEFINED DESKTOP_ICONDIR)

IF(NOT DEFINED DESKTOP_ICON)
	SET(DESKTOP_ICON ${PACKAGE_NAME}.png)
ENDIF(NOT DEFINED DESKTOP_ICON)

SET(TEST_SRCS 
        src/main.c
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/test/Fido_Sample_RPM/include)

ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE_NAME}\"")

INCLUDE(FindPkgConfig)
pkg_check_modules(TEST_PKGS REQUIRED
		elementary
		efl-extension
		capi-appfw-application
		capi-system-system-settings
		dlog
		json-glib-1.0
		glib-2.0
		gio-unix-2.0)

FOREACH(flag ${TEST_PKGS_CFLAGS})
	SET(EXTRA_CFLGAS "${EXTRA_CFLGAS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE ${EXTRA_CFLGAS}")
ADD_EXECUTABLE(${PACKAGE_NAME} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${PACKAGE_NAME} ${TEST_PKGS_LDFLAGS} )
TARGET_LINK_LIBRARIES(${PACKAGE_NAME} fido-client)
CONFIGURE_FILE(${PACKAGE_NAME}.xml.in ${PACKAGE_NAME}.xml)

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION ${BINDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/test/Fido_Sample_RPM/res/reg_req.json DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/test/Fido_Sample_RPM/res/auth_req.json DESTINATION ${RESDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/test/Fido_Sample_RPM/res/dereg_req.json DESTINATION ${RESDIR})
INSTALL(FILES ${PACKAGE_NAME}.xml DESTINATION ${MANIFESTDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/test/Fido_Sample_RPM/${DESKTOP_ICON} DESTINATION ${DESKTOP_ICONDIR})
